Route up some additional 3rd party apis. #638
